--- a/user_app/pubspec.yaml
+++ b/user_app/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   shimmer: ^3.0.0
   font_awesome_flutter:
   gif: ^2.3.0
+  flutter_image_compress: ^2.4.0
 
 dev_dependencies:
   flutter_test:
